--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 	</head>
 	<body>
 
+		<div class="clocks-container">
+			<div>
+				<div id="clock">
+					<script src="js\clock.js"></script>
+				</div>
+			</div>
+		</div>
 		
-
 	</body>
 </html>
